Fixed date misalignment

--- a/components/logCard.module.scss
+++ b/components/logCard.module.scss
@@ -48,6 +48,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
     border-radius: 0 4px 4px 0;
 
     & > span:first-child {
